--- a/index.html
+++ b/index.html
@@ -1,268 +1,190 @@
 <!DOCTYPE html>
-<html>
-  <head>
-    <meta http-equiv="Content-Type" content="text/html;charset=utf-8"/>
-    <link type="text/css" rel="stylesheet" href="style.css"/>
-    <style type="text/css">
+<html lang="en">
 
-path.arc {
-  cursor: move;
-  fill: #fff;
-}
+<head>
 
-.node {
-  font-size: 10px;
-}
+    <meta charset="utf-8">
+    <meta http-equiv="X-UA-Compatible" content="IE=edge">
+    <meta name="viewport" content="width=device-width, initial-scale=1">
+    <meta name="description" content="">
+    <meta name="author" content="">
 
-.node:hover {
-  fill: #1f77b4;
-}
+    <title>Visualizaciones</title>
 
-.link {
-  fill: none;
-  stroke: #1f77b4;
-  stroke-opacity: .4;
-  pointer-events: none;
-}
+    <!-- Bootstrap Core CSS -->
+    <link href="css/bootstrap.min.css" rel="stylesheet">
 
-.link.source, .link.target {
-  stroke-opacity: 1;
-  stroke-width: 2px;
-}
+    <!-- Custom CSS -->
+    <link href="css/1-col-portfolio.css" rel="stylesheet">
 
-.node.target {
-  fill: #d62728 !important;
-}
+    <!-- HTML5 Shim and Respond.js IE8 support of HTML5 elements and media queries -->
+    <!-- WARNING: Respond.js doesn't work if you view the page via file:// -->
+    <!--[if lt IE 9]>
+        <script src="https://oss.maxcdn.com/libs/html5shiv/3.7.0/html5shiv.js"></script>
+        <script src="https://oss.maxcdn.com/libs/respond.js/1.4.2/respond.min.js"></script>
+    <![endif]-->
 
-.link.source {
-  stroke: #d62728;
-}
+</head>
 
-.node.source {
-  fill: #2ca02c;
-}
+<body>
+	<script>
+			(function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){
+			(i[r].q=i[r].q||[]).push(arguments)},i[r].l=1*new Date();a=s.createElement(o),
+			m=s.getElementsByTagName(o)[0];a.async=1;a.src=g;m.parentNode.insertBefore(a,m)
+			})(window,document,'script','//www.google-analytics.com/analytics.js','ga');
 
-.link.target {
-  stroke: #2ca02c;
-}
+			ga('create', 'UA-89267-1', 'auto');
+			ga('send', 'pageview');
+		</script>
 
-    </style>
-  </head>
-  <body>
-    <script>
+    <!-- Navigation -->
+    <nav class="navbar navbar-inverse navbar-fixed-top" role="navigation">
+        <div class="container">
+            <!-- Brand and toggle get grouped for better mobile display -->
+            <div class="navbar-header">
+                <button type="button" class="navbar-toggle" data-toggle="collapse" data-target="#bs-example-navbar-collapse-1">
+                    <span class="sr-only">Toggle navigation</span>
+                    <span class="icon-bar"></span>
+                    <span class="icon-bar"></span>
+                    <span class="icon-bar"></span>
+                </button>
+                <a class="navbar-brand" href="#">beta</a>
+            </div>
+            <!-- Collect the nav links, forms, and other content for toggling -->
+            <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
+                <ul class="nav navbar-nav">
+                    <li>
+                        <a href="http://github.com/rodrigoap/datagob">github.com/rodrigoap/datagob</a>
+                    </li>
+                    <li>
+                        <a href="#"></a>
+                    </li>
+                    <li>
+                        <a href="#"></a>
+                    </li>
+                </ul>
+            </div>
+            <!-- /.navbar-collapse -->
+        </div>
+        <!-- /.container -->
+    </nav>
 
-      (function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){
-      (i[r].q=i[r].q||[]).push(arguments)},i[r].l=1*new Date();a=s.createElement(o),
-      m=s.getElementsByTagName(o)[0];a.async=1;a.src=g;m.parentNode.insertBefore(a,m)
-      })(window,document,'script','//www.google-analytics.com/analytics.js','ga');
+    <!-- Page Content -->
+    <div class="container">
 
-      ga('create', 'UA-89267-1', 'auto');
-      ga('send', 'pageview');
+        <!-- Page Heading -->
+        <div class="row">
+            <div class="col-lg-12">
+                <h1 class="page-header">Visualizaciones
+                    <small></small>
+                </h1>
+            </div>
+        </div>
+        <!-- /.row -->
 
-      function updateAudiencias() {
-        var monthSel = document.getElementById("month");
-        var monthValue = monthSel.options[monthSel.selectedIndex].text;
-        var yearSel = document.getElementById("year");
-        var yearValue = yearSel.options[yearSel.selectedIndex].text;
-        var chartDiv = document.getElementById("zz");
-        chartDiv.parentElement.removeChild(chartDiv);
-        drawAudienciasChart(monthValue, yearValue);
-      }
-    </script>
-    <h2>Audiencias</h2>
-    <div style="position:absolute;left:-155px;top:-80px;z-index:999;font-size:13px;">
-      <strong>beta</strong> | fuente: datos.gob.ar | <a href="http://github.com/rodrigoap/datagob">github.com/rodrigoap/datagob</a>
+        <!-- Project One -->
+        <div class="row">
+            <div class="col-md-7">
+                <a href="audiencias.html">
+									<img class="img-responsive" src="img/audiencias.png" alt="audiencias chart">
+                </a>
+            </div>
+            <div class="col-md-5">
+                <h3>Audiencias</h3>
+                <h4>datos.gob.ar</h4>
+                <p>Información sobre las Audiencias solicitadas a Funcionarios Públicos. La misma surge del Registro Único de Audiencias de Gestión de Intereses del Poder Ejecutivo Nacional, establecido por el Decreto 1172/2003.</p>
+                <a class="btn btn-primary" href="audiencias.html">Ver Proyecto <span class="glyphicon glyphicon-chevron-right"></span></a>
+            </div>
+        </div>
+        <!-- /.row -->
+
+        <hr>
+
+        <!-- Project Two -->
+        <div class="row">
+            <div class="col-md-7">
+                <a href="presupuesto.html">
+                    <img class="img-responsive" src="img/presupuestos.png" alt="presupuesto chart">
+                </a>
+            </div>
+            <div class="col-md-5">
+                <h3>Presupuesto</h3>
+                <h4>datos.gob.ar</h4>
+                <p>Datos correspondientes a la ejecución presupuestaria de la Administración Pública Nacional incluyendo apertura institucional, Fuente de Financiamiento,  Carácter y Objeto del Gasto, Finalidad y Función y Clasificador Económico.</p>
+                <a class="btn btn-primary" href="presupuesto.html">Ver Proyecto <span class="glyphicon glyphicon-chevron-right"></span></a>
+            </div>
+        </div>
+        <!-- /.row -->
+
+        <hr>
+
+        <!-- Project Three -->
+        <!-- div class="row">
+            <div class="col-md-7">
+                <a href="#">
+                    <img class="img-responsive" src="http://placehold.it/700x300" alt="">
+                </a>
+            </div>
+            <div class="col-md-5">
+                <h3>Project Three</h3>
+                <h4>Subheading</h4>
+                <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Omnis, temporibus, dolores, at, praesentium ut unde repudiandae voluptatum sit ab debitis suscipit fugiat natus velit excepturi amet commodi deleniti alias possimus!</p>
+                <a class="btn btn-primary" href="#">View Project <span class="glyphicon glyphicon-chevron-right"></span></a>
+            </div>
+        </div -->
+        <!-- /.row -->
+
+        <!-- Pagination -->
+        <!-- div class="row text-center">
+            <div class="col-lg-12">
+                <ul class="pagination">
+                    <li>
+                        <a href="#">&laquo;</a>
+                    </li>
+                    <li class="active">
+                        <a href="#">1</a>
+                    </li>
+                    <li>
+                        <a href="#">2</a>
+                    </li>
+                    <li>
+                        <a href="#">3</a>
+                    </li>
+                    <li>
+                        <a href="#">4</a>
+                    </li>
+                    <li>
+                        <a href="#">5</a>
+                    </li>
+                    <li>
+                        <a href="#">&raquo;</a>
+                    </li>
+                </ul>
+            </div>
+        </div -->
+        <!-- /.row -->
+
+        <hr>
+
+        <!-- Footer -->
+        <footer>
+            <div class="row">
+                <div class="col-lg-12">
+                    <p>Copyright &copy; geocoder.com.ar 2016</p>
+                </div>
+            </div>
+            <!-- /.row -->
+        </footer>
+
     </div>
-    <div style="position:absolute;left:-155px;top:-55px;z-index:999;font-size:13px;">
-      <label for="month">Mes:</label>
-      <select id="month" onchange="updateAudiencias()">
-        <option selected>1</option>
-        <option>2</option>
-        <option>3</option>
-        <option>4</option>
-        <option>5</option>
-        <option>6</option>
-        <option>7</option>
-        <option>8</option>
-        <option>9</option>
-        <option>10</option>
-        <option>11</option>
-        <option>12</option>
-      </select>
-      <label for="year">Año:</label>
-      <select id="year" onchange="updateAudiencias()">
-        <option selected>2015</option>
-        <option>2014</option>
-        <option>2013</option>
-        <option>2012</option>
-        <option>2011</option>
-        <option>2010</option>
-        <option>2009</option>
-        <option>2008</option>
-        <option>2007</option>
-        <option>2006</option>
-        <option>2005</option>
-        <option>2004</option>
-      </select>
-    </div>
-    <!-- button style="position:absolute;z-index:999" onclick="updateAudiencias()">AAA</button -->
-    <div style="position:absolute;bottom:0;font-size:18px;">tensión: <input style="position:relative;top:3px;" type="range" min="0" max="100" value="85"></div>
-    <script type="text/javascript" src="d3.js"></script>
-    <script type="text/javascript" src="d3.layout.js"></script>
-    <script type="text/javascript" src="packages.js"></script>
-    <script type="text/javascript">
-    function drawAudienciasChart(month, year) {
-      var w = 1280,
-          h = 800,
-          rx = w / 2,
-          ry = h / 2,
-          m0,
-          rotate = 0;
+    <!-- /.container -->
 
-      var splines = [];
+    <!-- jQuery -->
+    <script src="js/jquery.js"></script>
 
-      var cluster = d3.layout.cluster()
-          .size([360, ry - 120])
-          .sort(function(a, b) { return d3.ascending(a.key, b.key); });
+    <!-- Bootstrap Core JavaScript -->
+    <script src="js/bootstrap.min.js"></script>
 
-      var bundle = d3.layout.bundle();
+</body>
 
-      var line = d3.svg.line.radial()
-          .interpolate("bundle")
-          .tension(.85)
-          .radius(function(d) { return d.y; })
-          .angle(function(d) { return d.x / 180 * Math.PI; });
-
-      // Chrome 15 bug: <http://code.google.com/p/chromium/issues/detail?id=98951>
-      var div = d3.select("body").insert("div", "h2")
-          .style("top", "-80px")
-          .style("left", "-160px")
-          .style("width", w + "px")
-          .style("height", w + "px")
-          .style("position", "absolute")
-          .style("-webkit-backface-visibility", "hidden");
-      div.attr("id", "zz");
-      var svg = div.append("svg:svg")
-          .attr("width", w)
-          .attr("height", w)
-        .append("svg:g")
-          .attr("transform", "translate(" + rx + "," + ry + ")");
-
-      svg.append("svg:path")
-          .attr("class", "arc")
-          .attr("d", d3.svg.arc().outerRadius(ry - 120).innerRadius(0).startAngle(0).endAngle(2 * Math.PI))
-          .on("mousedown", mousedown);
-
-      d3.json("data/audiencias"+month+"_"+year+".json", function(classes) {
-        var nodes = cluster.nodes(packages.root(classes)),
-            links = packages.imports(nodes),
-            splines = bundle(links);
-
-        var path = svg.selectAll("path.link")
-            .data(links)
-          .enter().append("svg:path")
-            .attr("class", function(d) { return "link source-" + d.source.key + " target-" + d.target.key; })
-            .attr("d", function(d, i) { return line(splines[i]); });
-
-        svg.selectAll("g.node")
-            .data(nodes.filter(function(n) { return !n.children; }))
-          .enter().append("svg:g")
-            .attr("class", "node")
-            .attr("id", function(d) { return "node-" + d.key; })
-            .attr("transform", function(d) { return "rotate(" + (d.x - 90) + ")translate(" + d.y + ")"; })
-          .append("svg:text")
-            .attr("dx", function(d) { return d.x < 180 ? 8 : -8; })
-            .attr("dy", ".31em")
-            .attr("text-anchor", function(d) { return d.x < 180 ? "start" : "end"; })
-            .attr("transform", function(d) { return d.x < 180 ? null : "rotate(180)"; })
-            .text(function(d) { return d.key; })
-            .on("mouseover", mouseover)
-            .on("mouseout", mouseout);
-
-        d3.select("input[type=range]").on("change", function() {
-          line.tension(this.value / 100);
-          path.attr("d", function(d, i) { return line(splines[i]); });
-        });
-      });
-
-      d3.select(window)
-          .on("mousemove", mousemove)
-          .on("mouseup", mouseup);
-
-      function mouse(e) {
-        return [e.pageX - rx, e.pageY - ry];
-      }
-
-      function mousedown() {
-        m0 = mouse(d3.event);
-        d3.event.preventDefault();
-      }
-
-      function mousemove() {
-        if (m0) {
-          var m1 = mouse(d3.event),
-              dm = Math.atan2(cross(m0, m1), dot(m0, m1)) * 180 / Math.PI;
-          div.style("-webkit-transform", "translateY(" + (ry - rx) + "px)rotateZ(" + dm + "deg)translateY(" + (rx - ry) + "px)");
-        }
-      }
-
-      function mouseup() {
-        if (m0) {
-          var m1 = mouse(d3.event),
-              dm = Math.atan2(cross(m0, m1), dot(m0, m1)) * 180 / Math.PI;
-
-          rotate += dm;
-          if (rotate > 360) rotate -= 360;
-          else if (rotate < 0) rotate += 360;
-          m0 = null;
-
-          div.style("-webkit-transform", null);
-
-          svg
-              .attr("transform", "translate(" + rx + "," + ry + ")rotate(" + rotate + ")")
-            .selectAll("g.node text")
-              .attr("dx", function(d) { return (d.x + rotate) % 360 < 180 ? 8 : -8; })
-              .attr("text-anchor", function(d) { return (d.x + rotate) % 360 < 180 ? "start" : "end"; })
-              .attr("transform", function(d) { return (d.x + rotate) % 360 < 180 ? null : "rotate(180)"; });
-        }
-      }
-
-      function mouseover(d) {
-        svg.selectAll("path.link.target-" + d.key)
-            .classed("target", true)
-            .each(updateNodes("source", true));
-
-        svg.selectAll("path.link.source-" + d.key)
-            .classed("source", true)
-            .each(updateNodes("target", true));
-      }
-
-      function mouseout(d) {
-        svg.selectAll("path.link.source-" + d.key)
-            .classed("source", false)
-            .each(updateNodes("target", false));
-
-        svg.selectAll("path.link.target-" + d.key)
-            .classed("target", false)
-            .each(updateNodes("source", false));
-      }
-
-      function updateNodes(name, value) {
-        return function(d) {
-          if (value) this.parentNode.appendChild(this);
-          svg.select("#node-" + d[name].key).classed(name, value);
-        };
-      }
-
-      function cross(a, b) {
-        return a[0] * b[1] - a[1] * b[0];
-      }
-
-      function dot(a, b) {
-        return a[0] * b[0] + a[1] * b[1];
-      }
-    }
-    drawAudienciasChart(1, 2015);
-    </script>
-  </body>
 </html>
