--- a/index.html
+++ b/index.html
@@ -170,7 +170,7 @@
         <footer>
             <div class="row">
                 <div class="col-lg-12">
-                    <p>Copyright &copy; geocoder.com.ar 2016</p>
+                    <p>Copyright &copy; rodrigoap.com 2017</p>
                 </div>
             </div>
             <!-- /.row -->
